--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -28,6 +28,12 @@ long]
 
 \frontmatter{}
 \chapter*{Abstract}
+Software developers spend a lot of time working on the computer.
+This makes them particular susceptible to Repetitive Strain Injuries (RSI), which can be detrimental to one's career.
+Recently there have been great advancements in hands-free input systems that allow users to control a computer using their voice and/or an eye-tracker.
+These systems can be customized using one or more scripting languages, which allows users to acquire much higher proficiency than what was previously thought possible for someone without full use of their hands.
+There is however a steep learning curve, and a lot of work that goes into iteratively creating voice commands that allows for a fluent workflow.
+The goal of this thesis is to uncover techniques to automate this process, and increase the productivity of programmers coding with their voice.
 
 \tableofcontents{}
 \listoffigures{}
@@ -180,7 +186,7 @@ One interesting point here is to see how the result of this analysis relate to t
 \subsection{Data Collection}
 Analyze the Elm implementation of real world app (https://github.com/rtfeldman/elm-spa-example)
 
-\chapter{The project}
+\chapter{The Project}
 
 \chapter{Results}
 \section{Interviews}
