--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -1,3 +1,4 @@
+
 @incollection{Knuth:2007:CPA:1283920.1283929,
  author = {Knuth, Donald E.},
  chapter = {Computer Programming As an Art},
@@ -11,6 +12,24 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {standards},
+}
+
+@inproceedings{Arnold,
+  author = {Arnold, Stephen C. and Mark, Leo and Goldthwaite, John},
+  title = {Programming by Voice, VocalProgramming},
+  year = {2000},
+  isbn = {1581133138},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/354324.354362},
+  doi = {10.1145/354324.354362},
+  abstract = {A system that enables a person to program without typing  is needed because of the high incidents of repetitive stress  injuries among people who program. This paper presents a  design  for  a  system  that  generates  environments  that   enables people to program by voice and a method of  determining if the system is successful. It also shows how  this generator can be used to support entering data and  writing XML documents.},
+  booktitle = {Proceedings of the Fourth International ACM Conference on Assistive Technologies},
+  pages = {149-155},
+  numpages = {7},
+  keywords = {XML, voice recognition, computer programming},
+  location = {Arlington, Virginia, USA},
+  series = {Assets '00},
 }
 
 % @article{Deuce,
@@ -29,18 +48,17 @@
 %  % keywords = {standards},
 % }
 
-@article{deuce,
-   author={Brian Hempel, Justin Lubin and Grace Lu and Ravi Chugh},
-   title={Deuce: A Lightweight User Interface for Structured Editing},
-   journal={ICSE ’18: 40th International Conference on Software Engineering},
-   year=2018,
-}
+% @article{deuce,
+%    author={Brian Hempel, Justin Lubin and Grace Lu and Ravi Chugh},
+%    title={Deuce: A Lightweight User Interface for Structured Editing},
+%    journal={ICSE ’18: 40th International Conference on Software Engineering},
+%    year=2018,
+% }
 
 @inproceedings{gould2001implementation,
   title={Implementation and Acceptance of NatLink, a Python-Based Macro System for Dragon NaturallySpeaking},
   author={Gould, Joel},
   booktitle={The Ninth International Python Conference},
-  pages={5--8},
-  year={2001}
+  pages={5-8},
+  year={2001},
 }
-
