--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -32,29 +32,6 @@
   series = {Assets '00},
 }
 
-% @article{Deuce,
-%  author = {Brian Hempel, Justin Lubin, Grace Lu, and Ravi Chugh},
-%  journal = {to do},
-%  % chapter = {Computer Programming As an Art},
-%  title = {Deuce: A Lightweight User Interface for Structured Editing},
-%  year = {2018},
-%  % isbn = {978-1-4503-1049-9},
-%  % articleno = {1974},
-%  % url = {http://doi.acm.org/10.1145/1283920.1283929},
-%  % doi = {10.1145/1283920.1283929},
-%  % acmid = {1283929},
-%  % publisher = {ACM},
-%  % address = {New York, NY, USA},
-%  % keywords = {standards},
-% }
-
-% @article{deuce,
-%    author={Brian Hempel, Justin Lubin and Grace Lu and Ravi Chugh},
-%    title={Deuce: A Lightweight User Interface for Structured Editing},
-%    journal={ICSE ’18: 40th International Conference on Software Engineering},
-%    year=2018,
-% }
-
 @inproceedings{gould2001implementation,
   title={Implementation and Acceptance of NatLink, a Python-Based Macro System for Dragon NaturallySpeaking},
   author={Gould, Joel},
@@ -62,3 +39,9 @@
   pages={5-8},
   year={2001},
 }
+
+@book{creswell2018,
+      title     = "Research design : qualitative, quantitative \& mixed methods approaches",
+      author    = "John W. Creswell",
+      year      = 2018,
+    }
