--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -11,6 +11,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{minted}
 \usepackage{subfiles}
+\usepackage[toc,page]{appendix}
+\usepackage{xcolor}
 
 \usepackage{amsmath}
 \usepackage[thmmarks, amsmath, framed]{ntheorem}%
@@ -22,7 +24,6 @@
 \theoremseparator{\smallskip }
 
 \newtheorem{example}{Example}[section]
-
 
 % Style Chapters
 \usepackage[T1]{fontenc}
@@ -40,24 +41,31 @@
 
 \begin{document}
 
-% \duoforside[dept={Department of Informatics}, program={Informatics: Programming and System Architecture}, long]
-% \frontmatter{}
-% \subfile{chapters/abstract}
-% \tableofcontents{}
-% \listoffigures{}
-% \listoftables{}
-% % \chapter*{Preface}
-% \mainmatter{}
+\duoforside[dept={Department of Informatics}, program={Informatics: Programming and System Architecture}, long]
+\frontmatter{}
+\subfile{chapters/abstract}
+\tableofcontents{}
+\listoffigures{}
+\listoftables{}
+% \chapter*{Preface}
+\mainmatter{}
 
 \subfile{chapters/introduction}
 \subfile{chapters/background}
 \subfile{chapters/talon}
-% \subfile{chapters/methodology}
+\subfile{chapters/methodology}
 \subfile{chapters/project}
-% \subfile{chapters/results}
+\subfile{chapters/results}
+
+\chapter{Future Work}\label{future_work}
+\section{Comparison of Voice Programming Systems}
 
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 \backmatter{}
 \printbibliography{}
-
+% \appendix
+% \begin{appendices}
+% \chapter{Appendix}
+% The contents...
+% \end{appendices}
 \end{document}
