method chapter done, p3, p4

--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -45,3 +45,42 @@
       author    = "John W. Creswell",
       year      = 2018,
     }
+
+@article{jones2000rapid,
+  title={Rapid prototyping methodology in action: A developmental study},
+  author={Jones, Toni Stokes and Richey, Rita C},
+  journal={Educational Technology Research and Development},
+  volume={48},
+  number={2},
+  pages={63--80},
+  year={2000},
+  publisher={Springer}
+}
+@article{wichansky2000usability,
+  title={Usability testing in 2000 and beyond},
+  author={Wichansky, Anna M},
+  journal={Ergonomics},
+  volume={43},
+  number={7},
+  pages={998--1006},
+  year={2000},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{vasalou2004human,
+  title={Human-moderated remote user testing: Protocols and applications},
+  author={Vasalou, Asimina and Ng, Brian David and Wiemer-Hastings, Peter and Oshlyansky, Lidia},
+  booktitle={8th ERCIM Workshop, User Interfaces for All, Wien, Austria},
+  volume={19},
+  year={2004},
+  organization={Citeseer}
+}
+@article{louise1994collecting,
+  title={Collecting Data using a semi-structured interview: a discussion paper},
+  author={Louise Barriball, K and While, Alison},
+  journal={Journal of advanced nursing},
+  volume={19},
+  number={2},
+  pages={328--335},
+  year={1994},
+  publisher={Wiley Online Library}
+}
