--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -17,7 +17,8 @@
 \usepackage{amsmath}
 \usepackage[thmmarks, amsmath, framed]{ntheorem}%
 \usepackage{cleveref}
-
+\usepackage{enumitem}
+\setlist[enumerate]{label*=\arabic*.}
 \theoremstyle{break}
 \theoremheaderfont{\bfseries}
 \theorembodyfont{\mdseries}
@@ -59,6 +60,12 @@
 
 \chapter{Future Work}\label{future_work}
 \section{Comparison of Voice Programming Systems}
+\section{Who benefits the most from structural navigation?}
+Noivice vs experts? One user noted they thing the system would benefit beginners a lot due to the reduced cognitive load.
+\section{Understanding users mental model of programs}
+How easy is it to grasp the idea of ``nodes'' in a program?
+\section{Voice Command Cost Model}\label{cost_model}
+
 
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 \backmatter{}
