--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{subfiles}
 \usepackage[toc,page]{appendix}
 \usepackage{xcolor}
+\usepackage{tikz}
 
 \usepackage{amsmath}
 \usepackage[thmmarks, amsmath, framed]{ntheorem}%
@@ -65,6 +66,7 @@ Noivice vs experts? One user noted they thing the system would benefit beginners
 \section{Understanding users mental model of programs}
 How easy is it to grasp the idea of ``nodes'' in a program?
 \section{Voice Command Cost Model}\label{cost_model}
+% generate grammar from grammar.json???
 
 
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
