prototype chapter almost done

--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -19,6 +19,8 @@
 \usepackage[thmmarks, amsmath, framed]{ntheorem}%
 \usepackage{cleveref}
 \usepackage{enumitem}
+\usepackage[font=small,labelfont=bf,tableposition=top]{caption}
+\DeclareCaptionLabelFormat{andtable}{#1~#2  \&  \tablename~\thetable}
 \setlist[enumerate]{label*=\arabic*.}
 \theoremstyle{break}
 \theoremheaderfont{\bfseries}
