--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage{xcolor}
 \usepackage{tikz}
 
+\usepackage{xcolor,pifont}
 \usepackage{amsmath}
 \usepackage[thmmarks, amsmath, framed]{ntheorem}%
 \usepackage{cleveref}
@@ -69,7 +70,7 @@ Noivice vs experts? One user noted they thing the system would benefit beginners
 How easy is it to grasp the idea of ``nodes'' in a program?
 \section{Voice Command Cost Model}\label{cost_model}
 % generate grammar from grammar.json???
-
+% Limitation: need more participants with less experience with programming
 
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 \backmatter{}
