--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -84,3 +84,30 @@
   year={1994},
   publisher={Wiley Online Library}
 }
+
+@article{incremental,
+author = {Ghezzi, Carlo and Mandrioli, Dino},
+title = {Incremental Parsing},
+year = {1979},
+issue_date = {July 1979},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {1},
+number = {1},
+issn = {0164-0925},
+url = {https://doi.org/10.1145/357062.357066},
+doi = {10.1145/357062.357066},
+abstract = {An incremental parser is a device which is able to perform syntax analysis in an incremental way, avoiding complete reparsing of a program after each modification. The incremental parser presented extends the conventional LR parsing algorithm and its performance is compared with that of a conventional parser. Suggestions for an implementation and possible extensions to other parsing methods are also discussed.},
+journal = {ACM Trans. Program. Lang. Syst.},
+month = jan,
+pages = {58-70},
+numpages = {13}
+}
+@online{WinNT,
+  author = {GitHub},
+  % title = {{MS Windows NT} Kernel Description},
+  year = 2021,
+  url = {https://tree-sitter.github.io/tree-sitter/},
+  % urldate = {2010-09-30}
+}
+
