results, discussion, notes

--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -61,6 +61,7 @@
 \subfile{chapters/methodology}
 \subfile{chapters/project}
 \subfile{chapters/results}
+\subfile{chapters/discussion}
 
 \chapter{Future Work}\label{future_work}
 \section{Comparison of Voice Programming Systems}
