--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -103,6 +103,7 @@ month = jan,
 pages = {58-70},
 numpages = {13}
 }
+
 @online{WinNT,
   author = {GitHub},
   % title = {{MS Windows NT} Kernel Description},
@@ -111,3 +112,31 @@ numpages = {13}
   % urldate = {2010-09-30}
 }
 
+@article{griffin1993voice,
+  title={The voice of the customer},
+  author={Griffin, Abbie and Hauser, John R},
+  journal={Marketing science},
+  volume={12},
+  number={1},
+  pages={1--27},
+  year={1993},
+  publisher={INFORMS}
+}
+
+@article{omar2019live,
+  title={Live functional programming with typed holes},
+  author={Omar, Cyrus and Voysey, Ian and Chugh, Ravi and Hammer, Matthew A},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={3},
+  number={POPL},
+  pages={1--32},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{deuce,
+   author={Brian Hempel, Justin Lubin and Grace Lu and Ravi Chugh},
+   title={Deuce: A Lightweight User Interface for Structured Editing},
+   journal={ICSE ’18: 40th International Conference on Software Engineering},
+   year=2018,
+}
