--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -62,16 +62,7 @@
 \subfile{chapters/project}
 \subfile{chapters/results}
 \subfile{chapters/discussion}
-
-\chapter{Future Work}\label{future_work}
-\section{Comparison of Voice Programming Systems}
-\section{Who benefits the most from structural navigation?}
-Noivice vs experts? One user noted they thing the system would benefit beginners a lot due to the reduced cognitive load.
-\section{Understanding users mental model of programs}
-How easy is it to grasp the idea of ``nodes'' in a program?
-\section{Voice Command Cost Model}\label{cost_model}
-% generate grammar from grammar.json???
-% Limitation: need more participants with less experience with programming
+\subfile{chapters/conclusions}
 
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 \backmatter{}
