minor fixes everywhere

--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -44,7 +44,7 @@
 
 \newenvironment{code}[4][]
 {\VerbatimEnvironment
-    \begin{listing}[h]
+    \begin{listing}[!htb]
         \caption{#3}\label{#4}
     \begin{minted}[
         frame=lines,
