acknowledgments, preface, abstract, appendix

--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -140,3 +140,19 @@ numpages = {13}
    journal={ICSE ’18: 40th International Conference on Software Engineering},
    year=2018,
 }
+
+@online{rsi,
+  author = {Stephenie Overman},
+  title = {Don't Forget Ergonomics Away from the Office},
+  year = 2014,
+  url = {https://www.shrm.org/resourcesandtools/hr-topics/risk-management/pages/ergonomics-away-from-office.aspx},
+  % urldate = {2010-09-30}
+}
+
+@online{rsi2,
+  author = {John Balzar},
+  title = {RSI Exists. Does Not. Does Too ...},
+  year = 2001,
+  url = {https://www.latimes.com/archives/la-xpm-2001-aug-15-me-34271-story.html},
+  % urldate = {2010-09-30}
+}
