--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -13,7 +13,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{xcolor}
 \usepackage{tikz}
-\usepackage{listings}
+% \usepackage{listings}
 \usepackage{varioref}
 \usepackage{multicol}
 
@@ -42,6 +42,9 @@
 \nonstopmode{}
 \addbibresource{citations.bib}
 
+% \newcommand*{\xref}[1]{\hyperref[{#1}]{\Vref*{#1}, \nameref*{#1}}} % One single link
+\newcommand{\xref}[1]{\Ref{#1} \nameref{#1} \vpageref[\unskip]{#1}}
+
 \newenvironment{code}[4][]
 {\VerbatimEnvironment
     \begin{listing}[!htb]
@@ -54,6 +57,8 @@
 \AtBeginEnvironment{minted}{%
     \renewcommand{\fcolorbox}[4][]{#4}}
 
+\renewcommand\listoflistingscaption{List of Code Listings}
+
 \title{Master Thesis}
 \subtitle{Leveraging Language Tooling for Better Voice Coding}
 \author{Gaute Berge}
@@ -63,11 +68,12 @@
 \duoforside[dept={Department of Informatics}, program={Informatics: Programming and System Architecture}, long]
 \frontmatter{}
 \subfile{chapters/abstract}
+\subfile{chapters/acknowledgments}
 \tableofcontents{}
 \listoffigures{}
 \listoftables{}
 \listoflistings{}
-\chapter*{Preface}
+\subfile{chapters/preface}
 \mainmatter{}
 
 \subfile{chapters/introduction}
@@ -82,9 +88,5 @@
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 \backmatter{}
 \printbibliography{}
-% \appendix
-% \begin{appendices}
-% \chapter{Appendix}
-% The contents...
-% \end{appendices}
+\subfile{chapters/appendix}
 \end{document}
